2009-07-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp54/init.c, sp54/sp54.doc: Fix typos and comments.

2009-07-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* spstkalloc/spstkalloc.scn: Update screen.

2009-07-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add new test for user configured stack
	allocator/deallocator. Test both pass and fail cases.
	* spstkalloc/.cvsignore, spstkalloc/Makefile.am, spstkalloc/init.c,
	spstkalloc/spstkalloc.doc, spstkalloc/spstkalloc.scn: New files.

2009-07-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* spchain/init.c, spchain/spchain.scn: Clean up test.

2009-07-01	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add new test to cover bodies of some chain
	routines whose bodies are not used by RTEMS itself.
	* spchain/.cvsignore, spchain/Makefile.am, spchain/init.c,
	spchain/spchain.doc, spchain/spchain.scn: New files.

2009-07-01	Joel Sherrill <joel.sherrill@OARcorp.com>

	* spwatchdog/init.c, spwatchdog/spwatchdog.scn: Add test case of empty
	chain for coverage.

2009-07-01	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp01/sp01.doc, sp01/task1.c, sp16/sp16.doc, sp16/task5.c: Bypass
	RTEMS_MILLISECONDS_TO_TICKS and RTEMS_MICROSECONDS_TO_TICKS to
	improve coverage.

2009-07-01	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp01/task1.c: Use RTEMS_MILLISECONDS_TO_TICKS to improve coverage.

2009-06-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* spfatal10/.cvsignore, spfatal10/Makefile.am, spfatal10/init.c,
	spfatal10/spfatal10.doc, spfatal10/spfatal10.scn: New files.

2009-06-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, spprintk/init.c, spprintk/spprintk.scn:
	Enhance spprintk. Add two new fatal error tests to cover
	__assert_func.
	* spfatal11/.cvsignore, spfatal11/Makefile.am, spfatal11/init.c,
	spfatal11/spfatal11.doc, spfatal11/spfatal11.scn: New files.

2009-06-18	Chris Johns <chrisj@rtems.org>
