@@ -27,3 +27,4 @@ concepts:
 + Verify that when configuring a system which starts with the Idle task
   and uses that as a user task, you can configure your own Classic API
   Initialization Tasks Table and set to 0 tasks.
++ Verify the case where RTEMS zeros the workspace is covered.
