@@ -1,5 +1,9 @@
 2009-07-03	Joel Sherrill <joel.sherrill@OARcorp.com>
 
+	* sp54/init.c, sp54/sp54.doc: Add test for Workspace zeroed.
+
+2009-07-03	Joel Sherrill <joel.sherrill@OARcorp.com>
+
 	* sp54/init.c, sp54/sp54.doc: Fix typos and comments.
 
 2009-07-02	Joel Sherrill <joel.sherrill@OARcorp.com>
